<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/starwars_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".catalog.CatalogActivity"
    tools:showIn="@layout/activity_catalog">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loading_framelayout"
        android:visibility="visible"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:id="@+id/loading_progress_bar"
            />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/error_relativelayout"
        android:visibility="gone"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/error_textview"
            android:text="@string/error_title_message"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:layout_above="@+id/error_imageview"
            android:textSize="15sp"
            />

        <ImageView
            android:layout_width="@dimen/error_image_width"
            android:layout_height="@dimen/error_image_height"
            android:layout_centerInParent="true"
            android:background="@drawable/yodasad"
            android:id="@+id/error_imageview"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_below="@+id/error_imageview"
            android:text="Dynamic Text - Error Description"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:id="@+id/error_description_textview"
            android:layout_marginBottom="5dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/retryButton"
            android:layout_below="@id/error_description_textview"
            android:layout_centerHorizontal="true"
            android:text="@string/retry_connection"
            />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/catalog_recyclerview"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="vertical" />

</RelativeLayout>