<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_transaction_history"
        android:icon="@drawable/ic_action_history"
        app:showAsAction="always"
        android:title="@string/menu_transaction_history" />

    <item
        android:id="@+id/menu_shopping_cart"
        app:actionLayout="@layout/menu_action_item_badge"
        app:showAsAction="always"
        android:title="@string/menu_shopping_cart"/>

</menu>