...
                android:paddingRight="@dimen/product_info_padding"
                android:text="Dino da Silva Sauro"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/product_info_textsize" />

            <Button
                android:id="@+id/add_to_cart_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seller_textview"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
...
